--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <section id="home" class="hero-bg h-screen flex items-center justify-center text-center text-white relative">
         <div class="relative z-10 p-6 max-w-4xl mx-auto">
             <h1 class="text-5xl md:text-7xl font-extrabold leading-tight mb-6 tracking-tight drop-shadow-lg golden-text">
-                Momentos únicos, detalles que perduran.
+                Momentos únicos, detalles que perdurann.
             </h1>
             <p class="text-xl md:text-2xl mb-10 font-light drop-shadow-md">
                 Velas artesanales personalizadas para iluminar tus celebraciones.
