--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <section id="home" class="hero-bg h-screen flex items-center justify-center text-center text-white relative">
         <div class="relative z-10 p-6 max-w-4xl mx-auto">
             <h1 class="text-5xl md:text-7xl font-extrabold leading-tight mb-6 tracking-tight drop-shadow-lg golden-text">
-                Momentos únicos, detalles que perdurann.
+                Momentos únicos, detalles que perduran.
             </h1>
             <p class="text-xl md:text-2xl mb-10 font-light drop-shadow-md">
                 Velas artesanales personalizadas para iluminar tus celebraciones.
@@ -237,9 +237,8 @@
         <div class="container mx-auto text-center">
             <p class="text-lg mb-4">&copy; 2025 Aguaná Candles. Todos los derechos reservados.</p>
             <div class="flex justify-center space-x-6">
-                <a href="#" class="text-gray-400 hover:text-amber-200 transition-colors duration-300">Facebook</a>
-                <a href="#" class="text-gray-400 hover:text-amber-200 transition-colors duration-300">Instagram</a>
-                <a href="#" class="text-gray-400 hover:text-amber-200 transition-colors duration-300">Twitter</a>
+                <a href="https://www.facebook.com/profile.php?id=61576155490420&locale=es_LA" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-amber-200 transition-colors duration-300">Facebook</a>
+                <a href="https://www.instagram.com/aguana_candles/" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-amber-200 transition-colors duration-300">Instagram</a>
             </div>
         </div>
     </footer>
