--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 Velas artesanales personalizadas para iluminar tus celebraciones.
             </p>
             <a href="#products" class="bg-amber-600 hover:bg-amber-700 text-white font-semibold py-4 px-10 rounded-full text-lg shadow-xl transition-all duration-300 transform hover:scale-105">
-                Descubre Nuestra Colección
+                Colección
             </a>
         </div>
     </section>
